--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="shortcut icon" href="img/navicon.png" >
   <link rel="stylesheet" href="style.css">
+
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Great+Vibes&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Bad+Script&display=swap" rel="stylesheet">
@@ -45,7 +46,11 @@
 
    <!-- BODY DI BUKA-->
     <body>
-      
+      <audio controls autoplay>
+        <source src="musik/BeatifulInWhite.mp3" type="audio/ogg">
+        <source src="musik/BeatifulInWhite.mp3" type="audio/mpeg">
+      Your browser does not support the audio element.
+      </audio>
       <header role="banner" class="navbar navbar-fixed-top navbar-inverse">
             <div class="container">
 
@@ -61,10 +66,7 @@
                     <li><a href="#Akad">Akad</a></li>
                     <li><a href="#Resepsi">Resepsi</a></li>
                     <li><a href="#Galery">Galery</a></li>
-                    <audio autoplay>
-                      <source src="musik/BeatifulInWhite.mp3" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                    </audio>
+                    
                   </ul>
                 </nav>
               </div>
