--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
    <!-- BODY DI BUKA-->
     <body>
-      <audio controls autoplay>
+      <audio autoplay>
         <source src="musik/BeatifulInWhite.mp3" type="audio/ogg">
         <source src="musik/BeatifulInWhite.mp3" type="audio/mpeg">
       Your browser does not support the audio element.
