--- a/index.html
+++ b/index.html
@@ -45,12 +45,7 @@
   </script>
 
    <!-- BODY DI BUKA-->
-    <body>
-      <audio autoplay>
-        <source src="musik/BeatifulInWhite.mp3" type="audio/ogg">
-        <source src="musik/BeatifulInWhite.mp3" type="audio/mpeg">
-      Your browser does not support the audio element.
-      </audio>
+    
       <header role="banner" class="navbar navbar-fixed-top navbar-inverse">
             <div class="container">
 
@@ -251,6 +246,12 @@
                        <script src="jquery.2.min.js"></script>
                        <br>
                   </div>
+        <body>
+      <audio controll autoplay>
+        <source src="musik/BeatifulInWhite.mp3" type="audio/ogg">
+        <source src="musik/BeatifulInWhite.mp3" type="audio/mpeg">
+      Your browser does not support the audio element.
+      </audio>
           </div> <!--TUTUP BOX CONTENT-->
           <!-- begin htmlcommentbox.com -->
  <div id="HCB_comment_box">loading comments...</div>
