--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                        <br>
                   </div>
         <body>
-      <audio controll autoplay>
+      <audio controls autoplay>
         <source src="musik/BeatifulInWhite.mp3" type="audio/ogg">
         <source src="musik/BeatifulInWhite.mp3" type="audio/mpeg">
       Your browser does not support the audio element.
