--- a/index.html
+++ b/index.html
@@ -250,20 +250,10 @@
                        <script src="jquery.2.min.js"></script>
                        <br>
                   </div>
-<<<<<<< HEAD
-                  <audio controls autoplay>
-                    <source src="musik/BeatifulInWhite.mp3" type="audio/ogg">
-                    <source src="musik/BeatifulInWhite.mp3" type="audio/mpeg">
-                  Your browser does not support the audio element.
-                  </audio>
-=======
-        <body>
-      <audio controls autoplay>
-        <source src="musik/BeatifulInWhite.mp3" type="audio/ogg">
-        <source src="musik/BeatifulInWhite.mp3" type="audio/mpeg">
-      Your browser does not support the audio element.
-      </audio>
->>>>>>> 03f47736d7f5ec4c45b8f9103e6ff6d94ef096ef
+                  <div style="display:none">
+                    <embed src="musik/BeatifulInWhite.mp3"/> 
+                 </div>
+
           </div> <!--TUTUP BOX CONTENT-->
           <!-- begin htmlcommentbox.com -->
  <div id="HCB_comment_box">loading comments...</div>
