--- a/index.html
+++ b/index.html
@@ -45,11 +45,7 @@
   </script>
 
    <!-- BODY DI BUKA-->
-<<<<<<< HEAD
     <body>
-=======
-    
->>>>>>> 03f47736d7f5ec4c45b8f9103e6ff6d94ef096ef
       <header role="banner" class="navbar navbar-fixed-top navbar-inverse">
             <div class="container">
 
@@ -250,9 +246,8 @@
                        <script src="jquery.2.min.js"></script>
                        <br>
                   </div>
-                  <div style="display:none">
-                    <embed src="musik/BeatifulInWhite.mp3"/> 
-                 </div>
+                  <audio> { display:none;}
+                  <audio autoplay="true" src="musik/BeatifulInWhite.mp3"></audio>
 
           </div> <!--TUTUP BOX CONTENT-->
           <!-- begin htmlcommentbox.com -->
