--- a/index.html
+++ b/index.html
@@ -246,8 +246,8 @@
                        <script src="jquery.2.min.js"></script>
                        <br>
                   </div>
-                  <audio> { display:none;}
-                  <audio autoplay="true" src="musik/BeatifulInWhite.mp3"></audio>
+                  audio {display:none;}
+                  <audio autoplay="true" src="musik/BeatifulInWhite.mp3">
 
           </div> <!--TUTUP BOX CONTENT-->
           <!-- begin htmlcommentbox.com -->
